test/sema/missing-generic-args.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

// FIXME: Disabled for now.
// CHECK-NOT: [[@LINE+1]]:1: error: too few generic arguments to 'List', expected 1
List f() {
    // CHECK: [[@LINE+1]]:5: error: mismatching return type 'List<int>', expected 'List'
    return List<int>();
}

enum E {
    // FIXME: Disabled for now.
    // CHECK-NOT: [[@LINE+1]]:7: error: too few generic arguments to 'List', expected 1
    A(List l);
}
